# Buffout4

./: .gitignore  .gitmodules  .releaserc  Buffout4.toml  CMakeLists.txt  CMakePresets.json  README.md  bootstrap.ps1  vcpkg.json
.github/workflows/: build.yml  lint-pr.yaml  maintenance.yml
cmake/: headerlist.cmake  sourcelist.cmake
cmake/ports/tbb/: portfile.cmake  vcpkg.json
data/Data/F4SE/Plugins/: Buffout4.toml
ports/autotoml/: portfile.cmake
ports/infoware/: portfile.cmake
ports/robin-hood-hashing/: portfile.cmake
ports/tbb/: portfile.cmake  vcpkg.json
ports/tomlplusplus/: portfile.cmake  vcpkg.json
res/: Buffout4.toml
scripts/: PackageGen.py  archive_artifacts.py
src/: Allocator.cpp  CMakeLists.txt  Hash.cpp  PCH.cpp  PCH.h  Settings.h  main.cpp
src/Compatibility/: ClassicHolsteredWeapons.h  Compatibility.cpp  Compatibility.h  F4EE.cpp  F4EE.h
src/Crash/: CrashHandler.cpp  CrashHandler.h
src/Crash/Introspection/: Introspection.cpp  Introspection.h
src/Crash/Modules/: ModuleHandler.cpp  ModuleHandler.h
src/Crash/PDB/: PdbHandler.cpp  PdbHandler.h
src/Fixes/: ActorIsHostileToActorFix.h  CellInitFix.cpp  CellInitFix.h  CreateD3DAndSwapChainFix.cpp  CreateD3DAndSwapChainFix.h  EncounterZoneResetFix.h  Fixes.cpp  Fixes.h  GreyMovies.h  GreyMoviesFix.h  MagicEffectApplyEventFix.h  MovementPlannerFix.h  PackageAllocateLocationFix.h  PipboyLightInvFix.h  SafeExit.h  SafeExitFix.h  TESObjectREFRGetEncounterZoneFix.h  UnalignedLoadFix.h  UtilityShaderFix.cpp  UtilityShaderFix.h  WorkBenchSwapFix.h
src/Patches/: AchievementsPatch.cpp  AchievementsPatch.h  BSMTAManagerPatch.h  BSPreCulledObjectsPatch.h  BSTextureStreamerLocalHeapPatch.h  HavokMemorySystemPatch.h  INISettingCollectionPatch.h  InputSwitchPatch.cpp  InputSwitchPatch.h  MaxStdIOPatch.h  MemoryManagerPatch.cpp  MemoryManagerPatch.h  Patches.cpp  Patches.h  ScaleformAllocatorPatch.h  SmallBlockAllocatorPatch.cpp  SmallBlockAllocatorPatch.h  WorkshopMenuPatch.h
src/Warnings/: CreateTexture2DWarning.cpp  CreateTexture2DWarning.h  ImageSpaceAdapterWarning.cpp  ImageSpaceAdapterWarning.h  Warnings.cpp  Warnings.h
triplets/: x64-windows-static-custom.cmake
